--- a/package.json
+++ b/package.json
@@ -1,9 +1,5 @@
 {
     "name": "digimatix-internship",
-    "version": "1.0.0",
-
-    "dependencies": {
-        
-    }
+    "version": "1.0.0"
   }
   
